cmake_minimum_required(VERSION 2.8)

find_package(Threads)
if(THREADS_FOUND)
if(UNIX)
option(LIBRARY_THREADING_PThread "Use pthread" ON)
else()
option(LIBRARY_THREADING_PThread "Use pthread" OFF)
endif()
endif()

if(LIBRARY_THREADING_PThread)
add_definitions(-DINTRA_LIBRARY_THREADING=INTRA_LIBRARY_THREADING_PThread)
include_directories(${THREADS_INCLUDE_DIRS})
target_link_libraries(Intra ${CMAKE_THREAD_LIBS_INIT})
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
add_definitions(-DINTRA_LIBRARY_THREADING=INTRA_LIBRARY_THREADING_WinAPI)
else()
add_definitions(-DINTRA_LIBRARY_THREADING=INTRA_LIBRARY_THREADING_Dummy)
endif()
